--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="../src/images/logo.svg"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="manifest" href="/MomsAgainstEwoks/manifest.json"/><title>Moms Against Ewoks</title><script type="text/javascript">!function(n){if("/"===n.search[1]){var a=n.search.slice(1).split("&").map((function(n){return n.replace(/~and~/g,"&")})).join("?");window.history.replaceState(null,null,n.pathname.slice(0,-1)+a+n.hash)}}(window.location)</script><script defer="defer" src="/MomsAgainstEwoks/static/js/main.c2634391.js"></script><link href="/MomsAgainstEwoks/static/css/main.f8dd1130.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="favicon.ico" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="manifest" href="/MomsAgainstEwoks/manifest.json" />
+    <title>Moms Against Ewoks</title>
+    <script type="text/javascript">
+      !(function (n) {
+        if ("/" === n.search[1]) {
+          var a = n.search
+            .slice(1)
+            .split("&")
+            .map(function (n) {
+              return n.replace(/~and~/g, "&");
+            })
+            .join("?");
+          window.history.replaceState(
+            null,
+            null,
+            n.pathname.slice(0, -1) + a + n.hash
+          );
+        }
+      })(window.location);
+    </script>
+    <script
+      defer="defer"
+      src="/MomsAgainstEwoks/static/js/main.c2634391.js"
+    ></script>
+    <link
+      href="/MomsAgainstEwoks/static/css/main.f8dd1130.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
+</html>
